--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "micromatch": "^4.0.8",
     "minimark": "^0.2.0",
     "minimatch": "^10.0.3",
-    "nuxt-component-meta": "^0.14.0",
+    "nuxt-component-meta": "https://pkg.pr.new/nuxt-component-meta@6b22580",
     "nypm": "^0.6.1",
     "ohash": "^2.0.11",
     "pathe": "^2.0.3",
