--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "prepack": "nuxt-module-build build",
     "typecheck": "nuxt typecheck",
     "example": "run () { nuxt dev examples/$*; }; run",
-    "docs": "nuxt dev -e docus docs",
-    "docs:build": "nuxt-module-build build && nuxt build -e docus docs",
+    "docs": "nuxt dev docs",
+    "docs:build": "nuxt-module-build build && nuxt build docs",
     "dev": "nuxt dev playground",
     "dev:build": "nuxt build playground",
-    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxt prepare playground && nuxt prepare docs -e docus",
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxt prepare playground && nuxt prepare docs",
     "release": "npm run lint && npm run test && npm run prepack && release-it",
     "lint": "eslint .",
     "test": "vitest run",
@@ -86,7 +86,7 @@
     "micromatch": "^4.0.8",
     "minimark": "^0.2.0",
     "minimatch": "^10.0.3",
-    "nuxt-component-meta": "^0.14.0",
+    "nuxt-component-meta": "https://pkg.pr.new/nuxt-component-meta@6b22580",
     "nypm": "^0.6.1",
     "ohash": "^2.0.11",
     "pathe": "^2.0.3",
