--- a/docs/package.json
+++ b/docs/package.json
@@ -10,7 +10,7 @@
     "@nuxtjs/plausible": "^2.0.1",
     "@vueuse/nuxt": "^13.9.0",
     "better-sqlite3": "^12.4.1",
-    "docus": "5.1.0",
+    "docus": "https://pkg.pr.new/docus@1194",
     "minisearch": "^7.2.0",
     "@nuxt/ui": "^4.0.0",
     "nuxt": "^4.1.2"
