--- a/package.json
+++ b/package.json
@@ -72,10 +72,10 @@
     "defu": "^6.1.4",
     "destr": "^2.0.5",
     "git-url-parse": "^16.1.0",
+    "hookable": "^5.5.3",
     "jiti": "^2.5.1",
     "json-schema-to-typescript": "^15.0.4",
     "knitwork": "^1.2.0",
-    "listhen": "^1.9.0",
     "mdast-util-to-hast": "^13.2.0",
     "mdast-util-to-string": "^4.0.0",
     "micromark": "^4.0.2",
@@ -103,7 +103,7 @@
     "unified": "^11.0.5",
     "unist-util-stringify-position": "^4.0.0",
     "unist-util-visit": "^5.0.0",
-    "ws": "^8.18.3",
+    "unplugin": "^2.3.10",
     "zod": "^3.25.76",
     "zod-to-json-schema": "^3.24.6"
   },
